// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a large varient 1`] = `
<h1
  class="DisplayText DisplayText--large"
  data-test-id="cf-ui-display-text"
>
  DisplayText
</h1>
`;

exports[`renders the component 1`] = `
<h1
  class="DisplayText DisplayText--default"
  data-test-id="cf-ui-display-text"
>
  DisplayText
</h1>
`;

exports[`renders the component h3 1`] = `
<h3
  class="DisplayText DisplayText--default"
  data-test-id="cf-ui-display-text"
>
  DisplayText
</h3>
`;

exports[`renders the component with an additional class name 1`] = `
<h1
  class="DisplayText my-extra-class DisplayText--default"
  data-test-id="cf-ui-display-text"
>
  DisplayText
</h1>
`;
